--- a/html/template/default/yasai-bus/css/style.css
+++ b/html/template/default/yasai-bus/css/style.css
@@ -1631,7 +1631,7 @@ img {
 
 .upload-image {
     width: 345px;
-    height: 79px;
+    /*height: 79px;*/
     border-radius: 3px;
     background-color: #344250 !important;
     font-weight: bold !important;
@@ -2112,10 +2112,6 @@ img {
     color: #888888;
 }
 
-.exhibition .text-alight-center {
-    text-align: center !important;
-}
-
 .voice-section {
     display: none;
 }
@@ -2178,4 +2174,89 @@ img {
 
 .voice-section #comment-image-section {
     display: none;
+}
+
+/* Modal */
+.image-review {
+    border-radius: 5px;
+    transition: 0.3s;
+}
+.image-review:hover {opacity: 0.7;}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+}
+
+/* Modal Content (image) */
+.modal .modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+}
+
+/* Caption of Modal Image */
+.modal #caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
+}
+
+/* Add Animation */
+.modal .modal-content, .modal #caption {
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+}
+
+@-webkit-keyframes zoom {
+    from {-webkit-transform:scale(0)}
+    to {-webkit-transform:scale(1)}
+}
+
+@keyframes zoom {
+    from {transform:scale(0)}
+    to {transform:scale(1)}
+}
+
+/* The Close Button */
+.modal .close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.modal .close:hover,
+.modal .close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px){
+    .modal .modal-content {
+        width: 100%;
+    }
 }
