--- a/src/Eccube/Resource/template/default/Farm/farm_profile_edit.twig
+++ b/src/Eccube/Resource/template/default/Farm/farm_profile_edit.twig
@@ -344,7 +344,7 @@
                     <img id="upload-image" src="{{ img }}" alt="profile" class="img-circle medium-profile">
                     {{ form_widget(form.profile_image, {'attr': {'style': 'display: none;'}}) }}
                     {{ form_errors(form.profile_image) }}
-                    <span class="profile-name-medium color222 title16">{{ Customer.__toString }}農園</span>
+                    <span class="profile-name-medium color222 title16">{{ Customer.__toString }}</span>
                     <span class="profile-address-medium">{{ Customer.Pref.name }}{{ Customer.addr01 }}{{ Customer.addr02 }}</span>
                 </div>
 
