--- a/src/Eccube/Resource/template/default/Farm/service_signup.twig
+++ b/src/Eccube/Resource/template/default/Farm/service_signup.twig
@@ -18,7 +18,7 @@
     </style>
     <div class="wrapper" id="service-regist-receiver-wrapper">
         <div class="farmer-header">
-            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="margin-top10">
+            <a href="{{ url('top') }}"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="margin-top10"></a>
         </div>
 
         <div id="service-wrapper" class="row">
