add menu and link

--- a/html/template/default/yasai-bus/css/style.css
+++ b/html/template/default/yasai-bus/css/style.css
@@ -2322,3 +2322,9 @@ img {
 .voice-section #comment-image-section {
     display: none;
 }
+
+.button-x {
+    float: right;
+    margin-top:-40px;
+    font-size: 30px;
+}
