--- a/src/Eccube/Resource/template/default/Farm/farmer_setting_change.twig
+++ b/src/Eccube/Resource/template/default/Farm/farmer_setting_change.twig
@@ -12,7 +12,7 @@
 {% block main %}
     <div class="wrapper" id="service-regist-receiver-wrapper">
         <div class="farmer-header">
-            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="margin-top10">
+            <a href="{{ url('top') }}"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="margin-top10"></a>
         </div>
 
         <div id="service-wrapper">
