--- a/src/Eccube/Resource/template/default/Farm/service_profile.twig
+++ b/src/Eccube/Resource/template/default/Farm/service_profile.twig
@@ -61,7 +61,7 @@
     <div class="wrapper" id="service-regist-receiver-wrapper">
 
         <div class="farmer-header">
-            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="margin-top10">
+            <a href="{{ url('top') }}"> <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="margin-top10"></a>
         </div>
 
         <div class="backgroundf7f7f7" id="service-regist">
