--- a/src/Eccube/Resource/template/default/Farm/farm_home.twig
+++ b/src/Eccube/Resource/template/default/Farm/farm_home.twig
@@ -14,44 +14,116 @@
 
 {% block javascript %}
     <script type="text/javascript">
+        $(function () {
+            var openModal = function (review_class, caption) {
+                var modal = document.getElementById('myModal');
+                var modalImg = document.getElementById("model-image");
+                // review image
+                var img = document.getElementsByClassName(review_class);
+                var captionText = document.getElementById("caption");
+
+                var text = '';
+                if (caption) {
+                    text = document.getElementsByClassName(caption);
+                }
+
+                // review image
+                $(img).each(function(index, item) {
+                    item.onclick = function() {
+                        modal.style.display = "block";
+                        modalImg.src = this.src;
+                        if (text[index]) {
+                            captionText.innerHTML = text[index].value;
+                        } else {
+                            captionText.innerHTML = '';
+                        }
+                    };
+                });
+
+                var span = document.getElementsByClassName("close")[0];
+                span.onclick = function() {
+                    modal.style.display = "none";
+                };
+            };
+            openModal('image-review');
+        });
     </script>
 {% endblock %}
 {% block main %}
     <div id="reicever-wrapper" class="wrapper">
         <div class="container">
-        <div class="farmer-new-header">
-            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-menu.svg" class="hambuger-menu-reicever">
-            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-home.svg" class="nav-home">
-            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="logo-svg">
-        </div>
+            <div class="farmer-new-header">
+                <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-menu.svg" class="hambuger-menu-reicever">
+                <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-home.svg" class="nav-home">
+                <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="logo-svg">
+            </div>
 
-        <div class="exhibition">
-            <div class="row">
-                <div class="col-sm-12 col-xs-12">
-                    <ul class="list-inline">
-                        <li class="col-sm-3 col-xs-3 text-alight-center enable " id="selling">出品</li>
-                        <li class="col-sm-3 col-xs-3 text-alight-center disable" id="transaction">出荷登録</li>
-                        <li class="col-sm-3 col-xs-3 text-alight-center disable" id="delivery">集荷・配送</li>
-                        <li class="col-sm-3 col-xs-3 text-alight-center disable" id="complete">取引終了</li>
-                    </ul>
+            <div class="exhibition">
+                <div class="row">
+                    <div class="col-sm-12 col-xs-12">
+                        <ul class="list-inline">
+                            <li class="col-sm-3 col-xs-3 text-alight-center enable " id="selling">出品</li>
+                            <li class="col-sm-3 col-xs-3 text-alight-center disable" id="transaction">出荷登録</li>
+                            <li class="col-sm-3 col-xs-3 text-alight-center disable" id="delivery">集荷・配送</li>
+                            <li class="col-sm-3 col-xs-3 text-alight-center disable" id="complete">取引終了</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="product-section">
+                <div class="row">
+                    <div class="col-sm-12 col-xs-12">
+                        {% if products %}
+                            {% for product in products %}
+                                <div class="col-sm-3 col-xs-6 thumbnail">
+                                    <img class="image-review" src="{{ app.config.image_save_urlpath }}/{{ product.main_list_image|no_image_product }}" alt="...">
+                                    <div class="caption">
+                                        <h5 class="font-weight mg10">{{ product.name }}</h5>
+                                        <div class="row mg20">
+                                            <div class="col-sm-12 col-xs-12">
+                                                <div class="col-sm-6 col-xs-6">
+                                                    <h5 class="font-weight">{{ product.getPrice02IncTaxMin|price }}</h5>
+                                                </div>
+                                                <div class="col-sm-6 col-xs-6">
+                                                    <h5 class="font-weight">{{ product.getAmountFollowPrice02Min }}{{ product.getAmountUnitTypeFollowPrice02Min.name }}箱</h5>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <p>
+                                            <img src="{{ app.config.image_save_urlpath }}/{{ TargetCustomer.profile_image|no_image_product }}" alt="profile" class="img-circle small-profile">
+                                            <span class="profile-name">{{ TargetCustomer.__toString }}</span>
+                                            <span class="profile-address">{{ TargetCustomer.Pref.name }}{{ TargetCustomer.addr01 }}{{ TargetCustomer.addr02 }}</span>
+                                        </p>
+                                    </div>
+                                </div>
+                            {% endfor %}
+                        {% else %}
+                        <div class="fav-empty">
+                            <p>
+                                <span class="title12 display-block">出品されている商品はありません</span>
+                                <span class="title12">出品ボタンから商品の登録ができます</span>
+                            </p>
+
+                        </div>
+                        {% endif %}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-xs-12 text-alight-center">
+                        <div class="btn-group">
+                        <button class="btn btn-success">出品する</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="product-section">
-            <div class="row">
-            <div class="col-sm-12 col-xs-12">
-                    <div class="fav-empty">
-                        <p>
-                            <span class="title12 display-block">出品されている商品はありません</span>
-                            <span class="title12">出品ボタンから商品の登録ができます</span>
-                        </p>
-
-                        <button class="btn btn-success">出品する</button>
-                    </div>
-            </div>
-            </div>
-        </div>
-        </div>
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="model-image"/>
+        <div id="caption"></div>
     </div>
 {% endblock %}
