fix css and add menu

--- a/html/template/default/yasai-bus/css/style.css
+++ b/html/template/default/yasai-bus/css/style.css
@@ -986,6 +986,9 @@ img {
     margin-bottom: 10px !important;
 }
 
+.margin-bottom40 {
+    margin-bottom: 40px !important;
+}
 .padding-bottom10 {
     padding-bottom: 10px;
 }
