--- a/src/Eccube/Resource/template/default/Farm/farm_home.twig
+++ b/src/Eccube/Resource/template/default/Farm/farm_home.twig
@@ -66,7 +66,7 @@
                     modal.style.display = "none";
                 };
             };
-            openModal('image-review');
+            //openModal('image-review');
         });
     </script>
 {% endblock %}
@@ -74,7 +74,7 @@
     <div id="reicever-wrapper" class="wrapper">
             <div class="farmer-new-header">
                 <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-menu.svg" class="hambuger-menu-reicever">
-                <a href="{{ url('top') }}"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-home.svg" class="nav-home"></a>
+                <a href="{{ url('farm_home', {'id': TargetCustomer.id} ) }}"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-home.svg" class="nav-home"></a>
                 <a href="{{ url('top') }}"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="logo-svg"></a>
             </div>
 
@@ -97,7 +97,7 @@
                         {% if products %}
                             {% for product in products %}
                                 <div class="col-sm-3 col-xs-6 thumbnail">
-                                    <img class="image-review" src="{{ app.config.image_save_urlpath }}/{{ product.main_list_image|no_image_product }}" alt="...">
+                                    <a href="{{ url('farm_item_edit', {'id': product.id} ) }}"><img class="image-review" src="{{ app.config.image_save_urlpath }}/{{ product.main_list_image|no_image_product }}" alt="no imgae"></a>
                                     <div class="caption">
                                         <h5 class="font-weight mg10">{{ product.name }}</h5>
                                         <div class="row mg20">
@@ -131,7 +131,7 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-12 col-xs-12 text-alight-center">
-                        <button class="btn btn-success" id="action-button">出品する</button>
+                        <a href="{{ url('farm_item_new') }}"><button class="btn btn-success" id="action-button">出品する</button></a>
                     </div>
                 </div>
             </div>
@@ -142,5 +142,63 @@
         <span class="close">&times;</span>
         <img class="modal-content" id="model-image"/>
         <div id="caption"></div>
+    </div>
+
+    <div id="reicever-menu-wrapper" class="menu-wrapper hidden">
+        <div class="Rectangle">
+            <ul class="list-group" id="main-menu">
+                <li class="list-group-item li-profile">
+                    {% if TargetCustomer.profile_image %}
+                        {% set img = app.config.image_save_urlpath ~'/'~ TargetCustomer.profile_image %}
+                    {% endif %}
+                    <img id="upload-image" src="{{ img }}" alt="profile" class="img-circle small-profile">
+                    <span class="profile-name">{{ TargetCustomer.__toString }}</span>
+                    <span class="button-x">X</span>
+                </li>
+                <li class="list-group-item"><a href="{{ url('farm_profile', {'id': TargetCustomer.id} ) }}">プロフィール</a></li>
+                <li class="list-group-item"><a href="#">過去の出品</a></li>
+                <li class="list-group-item"><a href="#"><span>お知らせ</span><span class="li-active">&#x25CF;</span></a></li>
+                <li class="list-group-item" id="setting"><a href="#">設定</a></li>
+                <li class="list-group-item"><a href="#">お問い合わせ</a></li>
+                <li class="list-group-item"><a href="#">ガイド</a></li>
+            </ul>
+
+            <ul class="list-group hidden" id="setting-menu">
+                <li class="list-group-item li-profile">
+                    {% if TargetCustomer.profile_image %}
+                        {% set img = app.config.image_save_urlpath ~'/'~ TargetCustomer.profile_image %}
+                    {% endif %}
+                    <img id="upload-image" src="{{ img }}" alt="profile" class="img-circle small-profile">
+                    <span class="profile-name">{{ TargetCustomer.__toString }}</span>
+                    <span class="button-x">X</span>
+                </li>
+                <li class="list-group-item">
+                    <a href="{{ url('farm_service_profile_setting') }}">
+                        登録者名・住所・電話番号
+                        <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/arrow.png" class="float-right margin-top5">
+                    </a>
+
+                </li>
+                <li class="list-group-item">
+                    <a href="{{ url('farm_farmer_password_change') }}">
+                        メールアドレス・パスワード
+                        <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/arrow.png" class="float-right margin-top5">
+                    </a>
+                </li>
+                <li class="list-group-item">
+                    <a href="#">
+                        指定購入者への割引設定
+                        <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/arrow.png" class="float-right margin-top5">
+                    </a>
+
+                </li>
+                <li class="list-group-item">
+                    <a href="#">
+                        やさいバスについて
+                        <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/arrow.png" class="float-right margin-top5">
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 {% endblock %}
